# aspire-python

./: FizzyLogic.Aspire.Python.sln  README.md
.github/workflows/: ci.yml
orchestration/src/FizzyLogic.Aspire.Python.Hosting/: DjangoProjectResource.cs  DjangoProjectresourceBuilderExtensions.cs  FizzyLogic.Aspire.Python.Hosting.csproj  FlaskProjectResource.cs  FlaskProjectResourceBuilderExtensions.cs  PythonProjectResource.cs  PythonProjectResourceBuilderExtensions.cs  RequiredExecutableNotFoundException.cs  VirtualEnvironment.cs
orchestration/test/FizzyLogic.Aspire.Python.Hosting.Tests/: UnitTest1.cs
sample/apps/batch/: Dockerfile  README.md  main.py  pyproject.toml
sample/apps/django-service/: README.md  manage.py  pyproject.toml
sample/apps/django-service/django_service/: asgi.py  settings.py  urls.py  wsgi.py
sample/apps/django-service/pages/: urls.py  views.py
sample/apps/flask-service/: README.md  main.py  pyproject.toml
sample/host/FizzyLogic.Aspire.Python.AppHost/: FizzyLogic.Aspire.Python.AppHost.csproj  Program.cs  manifest.json
sample/host/FizzyLogic.Aspire.Python.AppHost/Properties/: launchSettings.json
